URI-Based-Routing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uri-v1
spec:
  selector:
    matchLabels:
      app: uri
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: uri
        version: v1
    spec:
      containers:
      - image: dogra21703/istio-header:v1
        name: dogra
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uri-v2
spec:
  selector:
    matchLabels:
      app: uri
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: uri
        version: v2
    spec:
      containers:
      - image: dogra21703/istio-header:v2
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uri-v3
spec:
  selector:
    matchLabels:
      app: uri
      version: v3
  replicas: 1
  template:
    metadata:
      labels:
        app: uri
        version: v3
    spec:
      containers:
      - image: dogra21703/istio-header:v3
        name: devops
        ports:
        - containerPort: 80
