URI-Based-Routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uri-svc
spec:
  selector:
    app: uri
  ports:
   - protocol: "TCP"
     port: 80
     targetPort: 80
  type: ClusterIP
