URI-Based-Routing/destination-routing-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: uri-svc
spec:
  host:  uri-svc
  subsets:
  - name: v1
    labels:
      version: v1 
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
